change project name and delete file  package.lock

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exchange-project-fe",
+  "name": "position-exchange-analytics",
   "version": "0.1.0",
   "private": true,
   "scripts": {
