--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "autoprefixer": "^10.4.2",
     "eslint": "8.11.0",
