--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "chart.js": "^3.7.1",
+    "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
