--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
     "react-dom": "17.0.2",
+    "react-topbar-progress-indicator": "^4.1.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
