--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-data-table-component": "^7.4.7",
     "react-dom": "17.0.2",
     "react-topbar-progress-indicator": "^4.1.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "web3": "^1.7.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.180",
