--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": ["Datas", "Unstake"] // T
+  "cSpell.words": ["Bscscan", "Datas", "Unstake"] // T
 }
