--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "bignumber.js": "^9.0.2",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
