--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "next": "12.1.0",
+    "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
