--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.26.1",
     "bignumber.js": "^9.0.2",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
@@ -22,12 +24,16 @@
     "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.8",
     "react-topbar-progress-indicator": "^4.1.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "web3": "^1.7.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.180",
+    "@types/lodash": "^4.14.181",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@types/styled-components": "^5.1.24",
