--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "web3": "^1.7.1"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@types/lodash": "^4.14.181",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
