--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@ethersproject/providers": "^5.6.4",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "axios": "^0.26.1",
     "bignumber.js": "^9.0.2",
     "chart.js": "^3.7.1",
