--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.5",
     "postcss": "^8.4.8",
