refactor: change property tailwindcss v2 to v3

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
       "officialSorting": false,
       "prependCustom": false,
       "removeDuplicates": true,
-      "whitelist": []
+      "whitelist": [],
+      "rules": {}
     }
   }
 }
