--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ethersproject/providers": "^5.6.4",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@nivo/core": "0.78",
+    "@nivo/line": "0.78",
     "@reduxjs/toolkit": "^1.8.1",
     "@walletconnect/web3-provider": "^1.7.8",
     "@web3-react/core": "^6.1.9",
