--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,9 @@
   "rules": {
     "prefer-const": "error",
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    //
+    "tailwindcss/no-custom-classname": "off"
   },
   "plugins": ["@typescript-eslint", "tailwindcss"],
   "settings": {
@@ -19,8 +21,7 @@
       "officialSorting": false,
       "prependCustom": false,
       "removeDuplicates": true,
-      "whitelist": [],
-      "rules": {}
+      "whitelist": []
     }
   }
 }
