--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/styled-engine-sc": "^5.6.1",
     "@nivo/core": "0.78",
     "@nivo/line": "0.78",
+    "@nivo/pie": "0.78",
     "@reduxjs/toolkit": "^1.8.1",
     "@walletconnect/web3-provider": "^1.7.8",
     "@web3-react/core": "^6.1.9",
