--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "preinstall": "npx npm-force-resolutions"
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -35,7 +34,6 @@
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-themes": "^0.1.1",
-    "npm-force-resolutions": "^0.0.10",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
@@ -67,8 +65,5 @@
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
-  },
-  "resolutions": {
-    "minimist": "1.2.6"
   }
 }
