--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-themes": "^0.1.1",
-    "react": "17.0.2",
+    "react": "^18.1.0",
     "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.1.0",
     "react-redux": "^7.2.8",
     "react-topbar-progress-indicator": "^4.1.1",
     "redux": "^4.1.2",
@@ -50,8 +50,9 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
     "@types/lodash": "^4.14.181",
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
+    "@types/node": "^17.0.35",
+    "@types/react": "18.0.1",
+    "@types/react-dom": "^18.0.4",
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "autoprefixer": "^10.4.2",
@@ -64,6 +65,6 @@
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.6.2"
+    "typescript": "^4.6.4"
   }
 }
