--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-themes": "^0.1.1",
-    "react": "^18.1.0",
+    "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-data-table-component": "^7.4.7",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
     "react-topbar-progress-indicator": "^4.1.1",
     "redux": "^4.1.2",
@@ -44,8 +44,8 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.35",
-    "@types/react": "18.0.1",
-    "@types/react-dom": "^18.0.4",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "autoprefixer": "^10.4.2",
@@ -59,5 +59,9 @@
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
