--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build"
+    }
+  },
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@ethersproject/providers": "^5.6.4",
